RESOLVED FIXED273773
Invalidate process object in XPC connection termination watchdog
https://bugs.webkit.org/show_bug.cgi?id=273773
Summary Invalidate process object in XPC connection termination watchdog
Per Arne Vollan
Reported 2024-05-06 07:57:52 PDT
Invalidate process object in XPC connection termination watchdog
Attachments
Per Arne Vollan
Comment 1 2024-05-06 07:58:02 PDT
Per Arne Vollan
Comment 2 2024-05-06 08:02:03 PDT
EWS
Comment 3 2024-05-25 20:51:11 PDT
Committed 279326@main (989daa949491): <https://commits.webkit.org/279326@main> Reviewed commits have been landed. Closing PR #28175 and removing active labels.
WebKit Commit Bot
Comment 4 2024-05-30 09:06:48 PDT
Re-opened since this is blocked by bug 274902
Per Arne Vollan
Comment 5 2024-05-31 08:21:29 PDT
EWS
Comment 6 2024-06-21 15:57:09 PDT
Committed 280261@main (a7a2ef1d4aba): <https://commits.webkit.org/280261@main> Reviewed commits have been landed. Closing PR #29375 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.