Source/WebKit/Platform/IPC/Connection.h
@@ -208,6 +208,7 @@ public:
     public:
         virtual void didClose(Connection&) = 0;
         virtual void didReceiveInvalidMessage(Connection&, MessageName) = 0;
+        virtual void requestRemoteProcessTermination() { }
 
     protected:
         virtual ~Client() { }
@@ -398,7 +399,7 @@ public:
 
     Identifier identifier() const;
 
-#if PLATFORM(COCOA)
+#if PLATFORM(COCOA) && !USE(EXTENSIONKIT)
     bool kill();
 #endif
 
